@@ -10,6 +10,8 @@ Jørgen Tjernø has done lots of cool things like write a manpage and .desktop
 file and improved the way tabbing works and also added home, end and del key
 handling as well as C-w for deleting words - thanks a lot!
 
+raw_input() and all its friends now work fine.
+
 v0.6.4
 ======
 KeyboardInterrupt handler clears the list window properly now.
